--- a/WeatherApp/pl.lproj/Localizable.strings
+++ b/WeatherApp/pl.lproj/Localizable.strings
@@ -1,3 +1,5 @@
 "appName" = "Pogodynka";
 "buttonText" = "Wejdź";
 "searchPlaceholder" = "Znajdź";
+"reuseIdentifier" = "searchCell";
+"errorMessage" = "Błąd przy pobieraniu danych";
