--- a/WeatherApp/pl.lproj/Localizable.strings
+++ b/WeatherApp/pl.lproj/Localizable.strings
@@ -5,3 +5,4 @@
 "invalid_response_message" = "Niewłaściwa odpowiedź serwera";
 "invalid_url_message" = "Niewłaściwy URL";
 "decoding_error_message" = "Nastąpił błąd podczas dekodowania";
+"ok_button_text" = "Okej";
