--- a/WeatherApp/pl.lproj/Localizable.strings
+++ b/WeatherApp/pl.lproj/Localizable.strings
@@ -6,3 +6,4 @@
 "invalid_url_message" = "Niewłaściwy URL";
 "decoding_error_message" = "Nastąpił błąd podczas dekodowania";
 "ok_button_text" = "Okej";
+"recent_label_text" = "ostatnie wyszukiwania";
