--- a/WeatherApp/en.lproj/Localizable.strings
+++ b/WeatherApp/en.lproj/Localizable.strings
@@ -6,4 +6,4 @@
 "invalid_url_message" = "Invalid URL";
 "decoding_error_message" = "Decoding error occured";
 "ok_button_text" = "OK";
-"recent_label_text" = "recent searchs";
+"recent_label_text" = "recent searches";
